# interview-projects

./: .gitignore
median-cpp/: CMakeLists.txt  app.cpp  median.cpp  median.hpp
median-d/source/: app.d  my_median.d
median-d/tests/: tests.d
nearestpoints-d/source/: app.d  base_nearest_point.d  base_nearest_point_tests.d  my_nearest_point.d  my_nearest_point_tests.d
